--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -15,11 +15,12 @@
 			  <div class="image-item navigable-item">
 				<img src="{{ $element.RelPermalink }}" alt="{{ with $element.Params.alt }}{{ . }}{{ else }}{{ $element.Title }}{{ end }}" />
 				<div class="image-caption">
-				  <p>{{ with $element.Params.caption }}{{ . }}{{ else }}No Caption{{ end }}
-				  {{ if gt $totalImages 1 }}
-					<span class="image-number"> {{ add $index 1 }}/{{ $totalImages }}</span>
-				  {{ end }}
-				  </p>
+				  <p>
+					{{ with $element.Params.caption }}{{ . }}<br>{{ else }}NO CAPTION{{ end }}
+					{{ $role := index $currentPage.Params.data 0 "description" }}
+					{{ $year := index $currentPage.Params.data 2 "description" }}
+					{{ $collaborators := index $currentPage.Params.data 1 "description" }}
+					{{ if $collaborators }}({{ $collaborators }}){{ else }}{{ end }} {{ if $role }}{{ $role }}{{ end }}{{ if $year }}, {{ $year }}{{ end }}		
 				</div>
 				{{ if eq $index 0 }}
 				<div class="project-content">
