--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -39,6 +39,15 @@
     {{- $js := resources.Get "scripts/focus.js" | js.Build | resources.Minify -}}
     <script type="module" src="{{ ($js | resources.Fingerprint "sha512").RelPermalink }}"></script>
 
+    {{- $js := resources.Get "scripts/header.js" | js.Build | resources.Minify -}}
+    <script type="module" src="{{ ($js | resources.Fingerprint "sha512").RelPermalink }}"></script>
+
+    {{- $js := resources.Get "scripts/screensaver.js" | js.Build | resources.Minify -}}
+    <script type="module" src="{{ ($js | resources.Fingerprint "sha512").RelPermalink }}"></script>
+
+    {{- $js := resources.Get "scripts/onload-img.js" | js.Build | resources.Minify -}}
+    <script type="module" src="{{ ($js | resources.Fingerprint "sha512").RelPermalink }}"></script>
+
     <!-- Analytics -->
     {{- with .Site.Params.GoatCounter }}
     <script data-goatcounter="https://{{.}}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
