--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -1,5 +1,7 @@
 :root {
   --space-unit: 20px;
+  --color: black;
+  --background-color: white;
 }
 
 body, html {
@@ -8,6 +10,7 @@ body, html {
   height: 100%;
   width: 100%;
 }
+
 .container {
   padding: var(--space-unit);
 }
@@ -24,11 +27,11 @@ body, html {
 }
 
 ::selection {
-  background-color: black;
-  color: white;
+  background-color: var(--color);
+  color: var(--background-color);
 }
 
 ::-moz-selection {
-  background-color: black;
-  color: white;
+  background-color: var(--color);
+  color: var(--background-color);
 }
