--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -1,108 +1,108 @@
-  .flex-item {
-      max-width: calc(100% - var(--space-unit));
-      display: flex;
-      flex-direction: column;
-  }
+// Flex Items——————————————————————————————————————————————
+.flex-item {
+  max-width: calc(100% - var(--space-unit));
+  display: flex;
+  flex-direction: column;
+}
 
-  .flex-item:focus {
-    outline: none;
-  }
-  
-  img {
-    position: relative;
-    height: auto;
-    display: block;
-    background-size:3px 3px;
-    background-position: 0px 0px;
-  }
+.flex-item:focus {
+  outline: none;
+}
 
-  .image-background {
-      position: relative;
-      display: inline-block; 
-      background-image: radial-gradient(black 1px, #f9f9f9 0);  
-      background-size:3px 3px;
-      background-position: 0px 0px;
-  }
+// Images——————————————————————————————————————————————
+.image-container {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: calc(var(--space-unit) / 2);
+}
 
-  .image-background img {
-      display: block; 
-      max-width: 100%; 
-      height: auto;
-  }
+.image-item img { 
+  max-width: 150px;
+  max-height: 150px; 
+  object-fit: contain;
+}
 
-  .image-container {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: calc(var(--space-unit) / 2);
-  }
-  
-  .image-caption {
-    padding-bottom: var(--space-unit);
-    padding-top: calc(var(--space-unit) / 2);
-    opacity: 0;
-    display: none;
-    max-width: 600px;
-    object-fit: contain;
-  }
-  
-  .image-item img,
-  .poem-item { 
-    max-width: 150px;
-    max-height: 150px; 
-    object-fit: contain;
-  }
-  
-  .image-item.navigable-item.active img,
-  .poem-item.navigable-item.active {
-    max-width: 600px;
-    max-height: 600px; 
-    object-fit: contain;
-  }
-  
-  .flex-item[data-highlight="true"] .image-item {
-    max-width: 600px;
-    max-height: 600px; 
-    object-fit: contain;
-  }
+.image-item.navigable-item.active img {
+  max-width: 600px;
+  max-height: 600px; 
+  object-fit: contain;
+}
 
-  /*** NEED TO STYLE **/
+.image-item.navigable-item.active .image-background:hover .overlay-caption {
+  opacity: 0;
+}
 
-  .project-content { 
-    width: 100%;
-    max-width: 250px;
-    box-sizing: border-box;
-    margin: 0 auto;
-  }
-  
-   /***  **/
+.image-background {
+  position: relative;
+  display: inline-block; 
+  background-image: radial-gradient(var(--color) 1px, var(--background-color) 0);  
+  background-size: 3px 3px;
+  background-position: 0 0;
+}
 
-  .navigable-item.active .project-content {
-    margin: 0; 
-  }
-  
-  .navigable-item:focus {
-    outline: none;
-  }
-  
-  :focus {
-    outline: none;
-  }
+.image-background img {
+  display: block;
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+}
 
-  .poem-item.active {
-    background-color: aquamarine;
-  }
-  
-  .poem-item {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    text-decoration: none;
-  }
-  
-  #totalMdFiles {
-    display: none;
-  }
-  
+.image-background:hover .overlay-caption {
+  opacity: 1;
+}
+
+img {
+  position: relative;
+  height: auto;
+  display: block;
+  background-size: 3px 3px;
+  background-position: 0 0;
+}
+
+// Fig Number Overlay ——————————————————————————————————————————————
+.overlay-caption {
+  position: absolute;
+  bottom: 0;
+  background: var(--background-color);
+  color: var(--color);
+  outline: 1px solid var(--color);
+  width: 100%;
+  height: 100%;
+  padding: calc(var(--space-unit) / 2);
+  opacity: 0;
+}
+
+// Image Caption ——————————————————————————————————————————————
+.image-caption {
+  padding-bottom: var(--space-unit);
+  padding-top: calc(var(--space-unit) / 2);
+  opacity: 0;
+  display: none;
+  max-width: 600px;
+  object-fit: contain;
+}
+
+// Project Content——————————————————————————————————————————————
+.project-content { 
+  width: 100%;
+  max-width: 250px;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+// Navigation ——————————————————————————————————————————————
+.navigable-item.active .project-content {
+  margin: 0; 
+}
+
+.navigable-item:focus {
+  outline: none;
+}
+
+:focus {
+  outline: none;
+}
+
+#totalMdFiles {
+  display: none;
+}
