--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -24,7 +24,7 @@
     <div class="contact">
         <a href="mailto:{{ .Params.email_link }}">{{ .Params.email_text }}</a>
         <a href="{{ .Params.instagram_link }}">{{ .Params.instagram_text }}</a>
-        <a href="{{ .Params.github_link }}">{{ .Params.github_text }}</a><br/> 
+        <a href="{{ .Params.github_link }}">{{ .Params.github_text }}</a>
     </div>
 </div>
 {{ $totalMarkdownFiles := 0 }} 
@@ -32,7 +32,7 @@
     {{ if eq .Section "work" }}
     {{ $totalMarkdownFiles = add $totalMarkdownFiles 1 }}
     {{ end }}
-{{ end }}       			
+{{ end }}
 <div class="flex-container">
     <div class="sort-container">
         <button id="sortAlpha" class="sort-button selected">Alphabetical</button>
