--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -1,46 +1,41 @@
 <div id="totalMdFiles"></div>
-<div id="assortment" class="flex-container"> <!-- Changed the class to an id for JavaScript hook -->
+<div id="assortment" class="flex-container">
   {{ $sortedPages := sort .Site.RegularPages "Title" "asc" }}
   {{ range $sortedPages }}
     {{ if eq .Section "work" }}
       {{ $currentPage := . }}
-      {{ $year := index .Params.data 2 "description" }} <!-- Assuming the year is in the third entry of the 'data' list -->
+      {{ $year := index .Params.data 2 "description" }}
       {{ $imageResources := .Resources.ByType "image" }}
-      {{ $totalImages := len $imageResources }}
       {{ if $imageResources }}
         {{ range $index, $element := $imageResources }}
-		    {{ $resizedImage := $element.Fit "1300x1300 webp" }} 
+          {{ $resizedImage := $element.Fit "1200x1200 webp" }}
           <div class="flex-item" data-title="{{ $currentPage.Title }}" data-year="{{ $year }}" tabindex="0">
             <div class="image-container">
               <div class="image-item navigable-item">
                 <div class="image-background">
-                	<img src="{{ $resizedImage.RelPermalink }}" alt="{{ with $resizedImage.Params.alt }}{{ . }}{{ else }}{{ $resizedImage.Title }}{{ end }}" />
+                  {{ with $resizedImage }}
+                    <img src="{{ .RelPermalink }}" class="lazy"
+                         alt="{{ with .Params.alt }}{{ . }}{{ else }}{{ .Title }}{{ end }}" 
+                         {{ if and .Width .Height }} width="{{ .Width }}" height="{{ .Height }}" {{ end }} />
+                  {{ end }}
+                  <div class="overlay-caption"></div>
                 </div>
                 <div class="image-caption">
-                  <p>
-                    {{ with $element.Params.caption }}{{ . }}{{ else }}NO CAPTION{{ end }}
-                    {{ $role := index $currentPage.Params.data 0 "description" }}
-                    {{ $year := index $currentPage.Params.data 2 "description" }}
-                    {{ $collaborators := index $currentPage.Params.data 1 "description" }}
-                    {{ if $collaborators }}({{ $collaborators }}){{ else }}{{ end }} {{ if $role }}{{ $role }}{{ end }}{{ if $year }}, {{ $year }}{{ end }}		
-                  </div>
-                  {{ if eq $index 0 }}
-                    <div class="project-content">
-                      {{ $currentPage.Content }}
-                    </div>
-                  {{ end }}
+                  <span class="image-number"></span>
+                  {{ with $element.Params.caption }}{{ . }}{{ else }}NO CAPTION{{ end }}
+                  {{ $role := index $currentPage.Params.data 0 "description" }}
+                  {{ $collaborators := index $currentPage.Params.data 1 "description" }}
+                  {{ if $collaborators }}({{ $collaborators }}){{ end }} {{ if $role }}{{ $role }}{{ end }}{{ if $year }}, {{ $year }}{{ end }}		
                 </div>
+                {{ if and (eq $index 0) $currentPage.Content }}
+                  <div class="project-content">
+                    {{ $currentPage.Content }}
+                  </div>
+                {{ end }}
               </div>
             </div>
-          {{ end }}
-      {{ else }}
-        <div class="flex-item" data-title="{{ $currentPage.Title }}" data-year="{{ $year }}" tabindex="0"> <!-- Added tabindex="0" and data attributes here -->
-          <div class="image-container">
-            <div class="poem-item navigable-item">
-              {{ $currentPage.Content }}
-            </div>
           </div>
-        </div>
+        {{ end }}
       {{ end }}
     {{ end }}
   {{ end }}
