--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -18,7 +18,7 @@ $line-height-base: 1.25em;
        url(/fonts/aulac/AulacRegular.woff) format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: fallback;
 }
 
 @mixin aulac-styles {
