--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -56,7 +56,6 @@ $line-height-base: 1.25em;
   font-size: $font-size-base;
   line-height: $line-height-base;
   display: flex;
-  flex-direction: column;
 
   a:link, a:visited {
     color: var(--color);
@@ -67,7 +66,37 @@ $line-height-base: 1.25em;
     color: var(--color);
     text-decoration: none;
   }
+
+  a:not(:last-child)::after {
+    content: '  ';
+    white-space: pre;
+  }
 }
+
+.contact {
+  flex-direction: row;
+}
+
+@media(min-width: 600px) { 
+  .contact { 
+    flex-direction: column;
+    
+    a:not(:last-child)::after {
+      content: '';
+    }
+  }
+}
+
+@media(min-width: 900px) { 
+  .contact { 
+    flex-direction: column;
+
+    a:not(:last-child)::after {
+      content: '';
+    }
+  }
+}
+
 
 .toggle-bio {
   @include aulac-styles;
