--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -5,6 +5,8 @@
     {{ if eq .Section "work" }}
       {{ $currentPage := . }}
       {{ $year := index .Params.data 2 "description" }}
+      
+      <!-- Handling image resources -->
       {{ $imageResources := .Resources.ByType "image" }}
       {{ if $imageResources }}
         {{ range $index, $element := $imageResources }}
@@ -22,6 +24,44 @@
                        data-large-width="{{ $largeImage.Width }}" 
                        data-large-height="{{ $largeImage.Height }}" 
                        class="lazy" />
+                  <div class="overlay-caption"></div>
+                </div>
+                <div class="image-caption">
+                  <span class="image-number"></span>
+                  {{ with $element.Params.caption }}{{ . }}{{ else }}NO CAPTION{{ end }}
+                  {{ $role := index $currentPage.Params.data 0 "description" }}
+                  {{ $collaborators := index $currentPage.Params.data 1 "description" }}
+                  {{ if $collaborators }}({{ $collaborators }}){{ end }} {{ if $role }}{{ $role }}{{ end }}{{ if $year }}, {{ $year }}{{ end }}		
+                </div>
+                {{ if and (eq $index 0) $currentPage.Content }}
+                  <div class="project-content">
+                    {{ $currentPage.Content }}
+                  </div>
+                {{ end }}
+              </div>
+            </div>
+          </div>
+        {{ end }}
+      {{ end }}
+      
+      <!-- Handling video resources -->
+      {{ $videoResources := .Resources.ByType "video" }}
+      {{ if $videoResources }}
+        {{ range $index, $element := $videoResources }}
+          <div class="flex-item" data-title="{{ $currentPage.Title }}" data-year="{{ $year }}" tabindex="0">
+            <div class="image-container">
+              <div class="image-item navigable-item">
+                <div class="image-background">
+                  <video
+                    id='video-js'
+                    class='vjs-default-skin video-js video-item'
+                    autoplay
+                    muted
+                    loop
+                    style="width: auto; height: 150px;"
+                    >
+                    <source src="{{ $element.RelPermalink }}" type='video/mp4'>
+                    </video>
                   <div class="overlay-caption"></div>
                 </div>
                 <div class="image-caption">
