--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -9,15 +9,19 @@
   outline: none;
 }
 
+#assortment {
+  align-items: flex-start;
+}
+
 // Images——————————————————————————————————————————————
 .image-container {
   display: flex;
   flex-wrap: nowrap;
   gap: calc(var(--space-unit) / 2);
+  align-items: flex-start;
 }
 
 .image-item img { 
-  max-width: 150px;
   max-height: 150px; 
   object-fit: contain;
 }
@@ -43,7 +47,7 @@
 .image-background img {
   display: block;
   width: 100%; 
-  height: 100%; 
+  height: auto; 
   object-fit: cover; 
 }
 
@@ -58,6 +62,8 @@ img {
   background-size: 3px 3px;
   background-position: 0 0;
 }
+// Videos——————————————————————————————————————————————
+
 
 // Fig Number Overlay ——————————————————————————————————————————————
 .overlay-caption {
