--- a/assets/scss/_projects.scss
+++ b/assets/scss/_projects.scss
@@ -94,6 +94,7 @@ img {
   max-width: 250px;
   box-sizing: border-box;
   margin: 0 auto;
+  display: none;
 }
 
 // Navigation ——————————————————————————————————————————————
