--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
 
     <!-- Preload Fonts -->
     <link rel="preload" href="/fonts/aulac/AulacRegular.woff" as="font" type="font/woff" crossorigin>
-    <link rel="preload" href="/fonts/aulac/AulacRegular2.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="/fonts/aulac/AulacRegular.woff2" as="font" type="font/woff2" crossorigin>
 
     <!-- Styles -->
     {{ $sass := resources.Get "scss/main.scss" }}
